Fix layout issues

--- a/css/default.css
+++ b/css/default.css
@@ -74,7 +74,9 @@ body {
 .notation {
   /* border: 3px solid DodgerBlue;
   border-radius: 4px; */
-  overflow:  hidden;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .resizer {
@@ -237,11 +239,11 @@ https://www.w3schools.com/css/css_tooltip.asp
 
 #verovio-panel {
   /* padding: 1rem 2rem 3rem 1rem; */
-display: block;
-padding: 0px;
+  display: block;
+  padding: 0px;
   overflow: scroll;
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   text-align: center;
   z-index: 9;
   background-color: var(--notationBackgroundColor);
